--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,10 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
+            - run:
+                      name: Install Python Dependencies
+                      command: |
+                        pip install --user --no-cache-dir -r requirements.txt
 
       - save_cache:
           paths:
